syntax = "proto3";

package account.v2;

option go_package = "github.com/galadeat/bank-sim/api/proto/account/v2;accountv2";

import "user/v1/user.proto";
import "common/v1/money.proto";

service Account {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc GetAccount(GetAccountRequest) returns (AccountInfo);
}



message CreateAccountRequest {
    string user_id = 1;
    common.v1.Money initial_balance = 2;
}

message CreateAccountResponse {
    string id = 1;
}

message GetAccountRequest {
    string id = 1;
}

message AccountInfo {
    string id = 1;
    user.v1.UserInfo owner = 2;
    common.v1.Money balance = 3;
}